--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
+@import url('https://fonts.googleapis.com/css2?family=Neucha&display=swap');
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  width: 100vw;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-family: 'Neucha', cursive;
+  box-sizing: border-box;
+}
+
+.heading {
+  text-transform: uppercase;
+  font-size: 40px;
+  margin: 30px 0;
+  /* color: #4F0341; */
+  /* color: #A0006D; */
+  /* color: #C53678; */
+  /* color: #1D1842; */
   color: white;
+  z-index: 1;
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-container {
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dropdown-select {
+  margin-top: 30px;
+}
+
+.modal-trigger-container {
+  margin-top: 30px;
+}
+
+.modal-trigger {
+  border: none;
+  border-radius: 15px;
+  background-color: #a0006d;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
 }
